package gaprequest;
option java_package = "org.yamcs.protobuf";

/*the dass playback can receive requests for playbacks from the CcsdsCompletenessIndex
 at the hornetq address yamcs-instance-name.DassPlaybackRequest
 this should go to the DaSS package once there is a smarter mechansim to request gaps via different means
*/

message CcsdsGap {
    optional int32 apid = 1;
    required int64 startTime = 2;
    required int64 stopTime = 3;
}

message CcsdsGapRequest {
    repeated CcsdsGap gaps = 1;
}
